resources/unused/technitium-dns/install/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: technitium-dns
  namespace: technitium-dns
  labels:
    app: technitium-dns
    app.kubernetes.io/name: technitium-dns
    app.kubernetes.io/part-of: technitium-dns
    app.kubernetes.io/instance: technitium-dns
    app.kubernetes.io/component: technitium-dns
  annotations:
    ignore-check.kube-linter.io/no-read-only-root-fs: "LinuxServer.io images do not require a read-only root filesystem"
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: technitium-dns
  template:
    metadata:
      labels:
        app: technitium-dns
        app.kubernetes.io/name: technitium-dns
        app.kubernetes.io/part-of: technitium-dns
        app.kubernetes.io/instance: technitium-dns
        app.kubernetes.io/component: technitium-dns
    spec:
      containers:
        - name: technitium-dns
          image: technitium/dns-server:15.6.0
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: false # Technitium DNS needs to write to the filesystem for caching and other operations
            allowPrivilegeEscalation: false # prevent sudo, etc.
            privileged: false               # prevent acting like host root
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 512Mi
          ports:
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 853
              name: dns-tls-tcp
              protocol: TCP
            - containerPort: 853
              name: dns-tls-udp
              protocol: UDP
            - containerPort: 5380
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 5
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 6
            successThreshold: 1
            timeoutSeconds: 10
          volumeMounts:
            - name: config
              mountPath: /etc/dns
            - name: password
              mountPath: /run/secrets/password.txt
              subPath: password.txt
        - name: technitium-dns-exporter
          image: ghcr.io/guycalledseven/technitium-dns-prometheus-exporter:v2.2.0
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false # prevent sudo, etc.
            privileged: false               # prevent acting like host root
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          ports:
            - containerPort: 9105
              name: metrics
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9105
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 5
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9105
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 6
            successThreshold: 1
            timeoutSeconds: 10
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: technitium-dns-config
        - name: password
          secret:
            secretName: technitium-dns-secret
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        fsGroup: 1000            # hardcode group to non-root if not set in Dockerfile
        runAsUser: 1000          # hardcode user to non-root if not set in Dockerfile
        runAsGroup: 1000         # hardcode group to non-root if not set in Dockerfile
        runAsNonRoot: true       # hardcode to non-root. Redundant to above if Dockerfile is set USER 1000
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - technitium-dns
              topologyKey: kubernetes.io/hostname
